--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 
 		<title>{title}</title>
 	</head>
-	<body class="bg-black text-[#fff400]">
+	<body class="bg-black max-w-2xl mx-auto py-10 text-[#f5f5f5] antialiased">
 		<slot />
 	</body>
 </html>
