--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,32 @@
 ---
+import { Image } from "@astrojs/image/components";
+import profileImage from "../assets/images/me.webp";
+import CustomTabs from "../components/CustomTabs";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Muhammad Taufiq Febrianto">
-	<main class="font-bold text-6xl">Muhammad Taufiq Febrianto</main>
+	<main>
+		<div class="flex justify-center">
+			<Image
+				src={profileImage}
+				alt="Muhammad Taufiq Febrianto"
+				width={200}
+				height={200}
+				class="rounded-md"
+				position="center"
+			/>
+		</div>
+
+		<h1 class="font-bold text-5xl mt-8 text-[#f5f5f5]">
+			Muhammad Taufiq Febrianto
+		</h1>
+
+		<p class="mt-3 text-lg text-[#888]">
+			Hello! I'm Taufiq. I am a Web Developer from Indonesia. I love building
+			stuff.
+		</p>
+
+		<CustomTabs client:load />
+	</main>
 </Layout>
