Tambah eslint & prettier

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import { Image } from "@astrojs/image/components";
-import profileImage from "../assets/images/me.webp";
-import CustomTabs from "../components/CustomTabs";
-import Layout from "../layouts/Layout.astro";
+import { Image } from '@astrojs/image/components';
+import profileImage from '../assets/images/me.webp';
+import CustomTabs from '../components/CustomTabs';
+import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Muhammad Taufiq Febrianto">
