--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,52 @@
 ---
 import '../styles/globals.css';
-
 export interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+const meta = {
+	description: 'Web Developer from Indonesia',
+	url: import.meta.env.SITE,
+	image: `${import.meta.env.SITE}/images/banner.png`,
+	imageAlt:
+		"A site banner containing Taufiq's profile picture, his full name, and his title",
+};
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content={meta.description} />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="canonical" href={meta.url} />
+		<meta name="robots" content="follow, index" />
 
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={meta.description} />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content={meta.url} />
+		<meta property="og:site_name" content={title} />
+		<meta property="og:image" content={meta.image} />
+		<meta property="og:image:alt" content={meta.imageAlt} />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@taufiqfebriant" />
+		<meta name="twitter:title" content={title} />
+		<meta name="twitter:description" content={meta.description} />
+		<meta name="twitter:image" content={meta.image} />
+		<meta name="twitter:image:alt" content={meta.imageAlt} />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="msapplication-config" content="/browserconfig.xml" />
+		<meta name="msapplication-TileColor" content="#000000" />
+		<meta name="theme-color" content="#000000" />
+
 		<link
 			rel="preload"
 			href="/fonts/Inter-VariableFont_slnt,wght.woff2"
@@ -25,6 +56,23 @@ const { title } = Astro.props;
 		/>
 
 		<title>{title}</title>
+
+		<!-- <SEO
+			title={title}
+			description="Web Developer from Indonesia"
+			openGraph={{
+				basic: {
+					title: 'Muhammad Taufiq Febrianto is a Web Developer from Indonesia',
+					type: 'website',
+					image: `${import.meta.env.SITE}/images/banner.png`,
+					url: import.meta.env.SITE,
+				},
+				image: {
+					alt: "A banner containing Taufiq's profile picture, his full name, and his title",
+				},
+			}}
+
+		/> -->
 	</head>
 	<body class="bg-black max-w-2xl mx-auto py-10 text-[#f5f5f5] antialiased">
 		<slot />
