--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,11 @@ import Layout from '../layouts/Layout.astro';
 			/>
 		</div>
 
-		<h1 class="font-bold text-5xl mt-8 text-[#f5f5f5]">
+		<h1 class="font-bold text-3xl md:text-5xl mt-8 text-[#f5f5f5]">
 			Muhammad Taufiq Febrianto
 		</h1>
 
-		<p class="mt-3 text-lg text-[#888]">
+		<p class="mt-3 text-base md:text-lg text-[#888]">
 			Hello! I'm Taufiq. I am a Web Developer from Indonesia. I love building
 			stuff.
 		</p>
