Perbaiki width & height dari image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,7 @@ import Layout from '../layouts/Layout.astro';
 			<Image
 				src={profileImage}
 				alt="Muhammad Taufiq Febrianto"
-				width={200}
-				height={200}
-				class="rounded-md"
-				position="center"
+				class="max-w-[180px] max-h-[180px] md:max-w-[200px] md:max-h-[200px] object-cover rounded-md"
 			/>
 		</div>
 
