--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 const meta = {
 	description: 'Web Developer from Indonesia',
 	url: import.meta.env.SITE,
-	image: `${import.meta.env.SITE}/images/banner.png`,
+	image: `${import.meta.env.SITE}images/banner.png`,
 	imageAlt:
 		"A site banner containing Taufiq's profile picture, his full name, and his title",
 };
