--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,7 @@ const meta = {
 		<title>{title}</title>
 	</head>
 	<body
-		class="bg-black max-w-2xl mx-auto py-10 text-[#f5f5f5] antialiased px-4 md:px-0"
+		class="bg-black max-w-2xl mx-auto py-10 text-[#f5f5f5] antialiased px-4 md:px-0 leading-7"
 	>
 		<slot />
 	</body>
