--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,15 +11,15 @@ import Layout from '../layouts/Layout.astro';
 			<Image
 				src={profileImage}
 				alt="Muhammad Taufiq Febrianto"
-				class="max-w-[180px] max-h-[180px] md:max-w-[200px] md:max-h-[200px] object-cover rounded-md"
+				class="max-w-[165px] max-h-[165px] md:max-w-[200px] md:max-h-[200px] object-cover rounded-md"
 			/>
 		</div>
 
-		<h1 class="font-bold text-3xl md:text-5xl mt-8 text-[#f5f5f5]">
+		<h1 class="font-bold text-3xl md:text-4xl text-center mt-8 text-[#f5f5f5]">
 			Muhammad Taufiq Febrianto
 		</h1>
 
-		<p class="mt-3 text-base md:text-lg text-[#888]">
+		<p class="mt-3 text-base md:text-lg text-[#888] text-center">
 			Hello! I'm Taufiq. I am a Web Developer from Indonesia. I love building
 			stuff.
 		</p>
